[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyRenderdocApp"
readme = "README.md"
description = "A small wrapper for the renderdoc in-app api in python."
authors = [
  { name="Thomas Mathieson", email="thomas@mathieson.dev" },
]
version = "0.1.0"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Environment :: GPU",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Software Development :: Debuggers"
]
dependencies = [

]

[project.urls]
Homepage = "https://github.com/space928/pyRenderdocApp"
Issues = "https://github.com/space928/pyRenderdocApp/issues"

[project.optional-dependencies]
docs = [
    "jupyter_sphinx",
    "nbsphinx",
    "nbsphinx-link",
    "pypandoc",
    "pytest_check_links",
    "recommonmark",
    "sphinx>=1.5",
    "sphinx_rtd_theme",
]
examples = []
test = [
    "nbval",
    "pytest-cov",
    "pytest>=6.0",
]

[tool.hatch.build.targets.sdist]
artifacts = ["pySSV/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"pySSV/labextension" = "share/jupyter/labextensions/py-ssv"
"install.json" = "share/jupyter/labextensions/py-ssv/install.json"

[tool.hatch.build.hooks.version]
path = "pySSV/_version.py"
